##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = covid19kg
version = 0.0.1
long_description = file: README.rst

[options]
install_requires =
    bel_repository>=0.1.0
    pybel>=0.14.6
# Random options
python_requires = >=3.6
zip-safe = false
include-package-data = true

# Where is my code
packages = covid19kg

[options.entry_points]
console_scripts =
    covid19kg = covid19kg:main
